--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -172,10 +172,9 @@
         </section>
         <section class="praias">
             <article class="box-praia">
-                <img src="/images/ilhabela.jfif" alt="" class="icon">
+                <img src="/images/OIP.jfif" alt="" class="icon">
                 <ul class="info">
-                    <li><h1>1. Praia de Ilhabela</h1></li>
-                    <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
                     <li><p>Estado: São Paulo</p></li>
                     <li><p>Região: Sudeste</p></li>
@@ -184,50 +183,46 @@
                 </ul>
             </article>
             <article class="box-praia">
-                <img src="/images/noronha.jpg" alt="" class="icon">
+                <img src="/images/OIP.jfif" alt="" class="icon">
                 <ul class="info">
-                    <li><h1>2. Praia do Sancho</h1>
-                        <li>Status:<img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
-                    <li><p>Estado: Bahia</p></li>
-                    <li><p>Região: Nordeste</p></li>
-                    <p>Considerada uma das melhores praias do Brasil e, certamente, uma das praias mais bonitas, a Praia do Sancho é um passeio imperdível em Fernando de Noronha.</p>
-                    <button>Saiba Mais</button>
-                </ul>
-            </article>
-            <article class="box-praia">
-                <img src="/images/barreirinhas.jpg" alt="" class="icon">
-                <ul class="info">
-                    <li><h1>3. Barreirinhas</h1>
-                        <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
-                    <li><p>País: Brasil</p></li>
-                    <li><p>Estado: Maranhão</p></li>
-                    <li><p>Região: Nordeste</p></li>
-                    <p>As praias mais bonitas do Brasil também podem ser de água doce! E a prova disso são as lagoas dos Lençóis Maranhenses, que formam incontáveis piscinas de água da chuva.</p>
-                    <button>Saiba Mais</button>
-                </ul>
-            </article>
-            <article class="box-praia">
-                <img src="/images/brava.jpg" alt="" class="icon">
-                <ul class="info">
-                    <li><h1>4. Praia Brava</h1>
-                        <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
-                    <li><p>País: Brasil</p></li>
-                    <li><p>Estado: Rio de Janeiro</p></li>
+                    <li><p>Estado: São Paulo</p></li>
                     <li><p>Região: Sudeste</p></li>
-                    <p>Não se deixe levar pelo nome. A Praia Brava em nada lembra um ambiente pouco acolhedor. Muito pelo contrário! É provável que ela seja uma das mais convidativas porções de areia de Búzios, na Região dos Lagos do Rio de Janeiro.</p>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
                     <button>Saiba Mais</button>
                 </ul>
             </article>
             <article class="box-praia">
-                <img src="/images/frances.jpg" alt="" class="icon">
+                <img src="/images/OIP.jfif" alt="" class="icon">
                 <ul class="info">
-                    <li><h1>5. Praia do Francês</h1>
-                        <li>Status: <img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
-                    <li><p>Estado: Alagoas</p></li>
-                    <li><p>Região: Nordeste</p></li>
-                    <p>Considerada uma das praias mais bonitas de Alagoas e uma das melhores praias do Brasil, a Praia do Francês é hoje um point muito procurado por quem visita Maceió.</p>
+                    <li><p>Estado: São Paulo</p></li>
+                    <li><p>Região: Sudeste</p></li>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                    <button>Saiba Mais</button>
+                </ul>
+            </article>
+            <article class="box-praia">
+                <img src="/images/OIP.jfif" alt="" class="icon">
+                <ul class="info">
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><p>País: Brasil</p></li>
+                    <li><p>Estado: São Paulo</p></li>
+                    <li><p>Região: Sudeste</p></li>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                    <button>Saiba Mais</button>
+                </ul>
+            </article>
+            <article class="box-praia">
+                <img src="/images/OIP.jfif" alt="" class="icon">
+                <ul class="info">
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><p>País: Brasil</p></li>
+                    <li><p>Estado: São Paulo</p></li>
+                    <li><p>Região: Sudeste</p></li>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
                     <button>Saiba Mais</button>
                 </ul>
             </article>
