--- a/htmls/praias/barreirinhas.html
+++ b/htmls/praias/barreirinhas.html
@@ -23,13 +23,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="painel">
-                    <img src="/images/ilhabela.jfif" alt="">
+                    <img src="/images/barreirinhas.jpg" alt="">
                 </div>
                 <div class="painel">
-                    <img src="/images/Ilhabela2.jpg" alt="">
+                    <img src="/images/barreirinhas2.webp" alt="">
                 </div>
                 <div class="painel">
-                    <h1>Painel 3</h1>
+                    <img src="/images/barreirinhas3.webp" alt="">
                 </div>
             </div>
             <button class="seta" id="anterior" onclick="mudar(-1)">&#8249;</button> <!--Isso é o codigo unidecimal para a setinha-->
