--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -180,11 +180,11 @@
                     <li><p>Estado: São Paulo</p></li>
                     <li><p>Região: Sudeste</p></li>
                     <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
-                    <a href="/htmls/ilhabela.html"><button>Saiba Mais</button></a>
+                    <a href="/htmls/praias/ilhabela.html"><button>Saiba Mais</button></a>
                 </ul>
             </article>
             <article class="box-praia">
-                <img src="/images/noronha.jpg" alt="" class="icon">
+                <img src="/images/sancho.jpg" alt="" class="icon">
                 <ul class="info">
                     <li><h1>2. Praia do Sancho</h1>
                         <li>Status:<img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
@@ -192,7 +192,7 @@
                     <li><p>Estado: Bahia</p></li>
                     <li><p>Região: Nordeste</p></li>
                     <p>Considerada uma das melhores praias do Brasil e, certamente, uma das praias mais bonitas, a Praia do Sancho é um passeio imperdível em Fernando de Noronha.</p>
-                    <button>Saiba Mais</button>
+                    <a href="/htmls/praias/sancho.htm"><button>Saiba Mais</button></a>
                 </ul>
             </article>
             <article class="box-praia">
@@ -204,7 +204,7 @@
                     <li><p>Estado: Maranhão</p></li>
                     <li><p>Região: Nordeste</p></li>
                     <p>As praias mais bonitas do Brasil também podem ser de água doce! E a prova disso são as lagoas dos Lençóis Maranhenses, que formam incontáveis piscinas de água da chuva.</p>
-                    <button>Saiba Mais</button>
+                    <a href="/htmls/praias/barreirinhas.html"><button>Saiba Mais</button></a>
                 </ul>
             </article>
             <article class="box-praia">
@@ -216,7 +216,7 @@
                     <li><p>Estado: Rio de Janeiro</p></li>
                     <li><p>Região: Sudeste</p></li>
                     <p>Não se deixe levar pelo nome. A Praia Brava em nada lembra um ambiente pouco acolhedor. Muito pelo contrário! É provável que ela seja uma das mais convidativas porções de areia de Búzios, na Região dos Lagos do Rio de Janeiro.</p>
-                    <button>Saiba Mais</button>
+                    <a href="/htmls/praias/brava.html"><button>Saiba Mais</button></a>
                 </ul>
             </article>
             <article class="box-praia">
@@ -228,7 +228,7 @@
                     <li><p>Estado: Alagoas</p></li>
                     <li><p>Região: Nordeste</p></li>
                     <p>Considerada uma das praias mais bonitas de Alagoas e uma das melhores praias do Brasil, a Praia do Francês é hoje um point muito procurado por quem visita Maceió.</p>
-                    <button>Saiba Mais</button>
+                    <a href="/htmls/praias/frances.html"><button>Saiba Mais</button></a>
                 </ul>
             </article>
             
