--- a/htmls/praias/frances.html
+++ b/htmls/praias/frances.html
@@ -23,13 +23,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="painel">
-                    <img src="/images/ilhabela.jfif" alt="">
+                    <img src="/images/frances.jpg" alt="">
                 </div>
                 <div class="painel">
-                    <img src="/images/Ilhabela2.jpg" alt="">
+                    <img src="/images/frances2.jpg" alt="">
                 </div>
                 <div class="painel">
-                    <h1>Painel 3</h1>
+                    <img src="/images/frances3.jpg" alt="">
                 </div>
             </div>
             <button class="seta" id="anterior" onclick="mudar(-1)">&#8249;</button> <!--Isso é o codigo unidecimal para a setinha-->
@@ -37,12 +37,12 @@
         </div>
         <section class="infoPraia">
             <ul>
-                <li><h1>Praia de Ilhabela</h1></li>
-                <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
-                <li><p>País: Brasil</p></li>
-                <li><p>Estado: São Paulo</p></li>
-                <li><p>Região: Sudeste</p></li>
-                <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                <li><h1>Praia do Francês</h1>
+                    <li>Status: <img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><p>País: Brasil</p></li>
+                    <li><p>Estado: Alagoas</p></li>
+                    <li><p>Região: Nordeste</p></li>
+                    <p>Considerada uma das praias mais bonitas de Alagoas e uma das melhores praias do Brasil, a Praia do Francês é hoje um point muito procurado por quem visita Maceió.</p>
             </ul>
         </section>
         <aside id="coments">
