--- a/htmls/praias/barreirinhas.html
+++ b/htmls/praias/barreirinhas.html
@@ -37,12 +37,12 @@
         </div>
         <section class="infoPraia">
             <ul>
-                <li><h1>Praia de Ilhabela</h1></li>
+                <li><h1>Barreirinhas</h1>
                 <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                 <li><p>País: Brasil</p></li>
-                <li><p>Estado: São Paulo</p></li>
-                <li><p>Região: Sudeste</p></li>
-                <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                <li><p>Estado: Maranhão</p></li>
+                <li><p>Região: Nordeste</p></li>
+                <p>As praias mais bonitas do Brasil também podem ser de água doce! E a prova disso são as lagoas dos Lençóis Maranhenses, que formam incontáveis piscinas de água da chuva.</p>
             </ul>
         </section>
         <aside id="coments">
