--- a/htmls/praias/brava.html
+++ b/htmls/praias/brava.html
@@ -23,13 +23,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="painel">
-                    <img src="/images/ilhabela.jfif" alt="">
+                    <img src="/images/brava.jpg" alt="">
                 </div>
                 <div class="painel">
-                    <img src="/images/Ilhabela2.jpg" alt="">
+                    <img src="/images/brava2.webp" alt="">
                 </div>
                 <div class="painel">
-                    <h1>Painel 3</h1>
+                    <img src="/images/brava3.jpg" alt="">
                 </div>
             </div>
             <button class="seta" id="anterior" onclick="mudar(-1)">&#8249;</button> <!--Isso é o codigo unidecimal para a setinha-->
@@ -37,12 +37,12 @@
         </div>
         <section class="infoPraia">
             <ul>
-                <li><h1>Praia de Ilhabela</h1></li>
-                <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                <li><h1>Praia Brava</h1>
+                <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                 <li><p>País: Brasil</p></li>
-                <li><p>Estado: São Paulo</p></li>
+                <li><p>Estado: Rio de Janeiro</p></li>
                 <li><p>Região: Sudeste</p></li>
-                <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                <p>Não se deixe levar pelo nome. A Praia Brava em nada lembra um ambiente pouco acolhedor. Muito pelo contrário! É provável que ela seja uma das mais convidativas porções de areia de Búzios, na Região dos Lagos do Rio de Janeiro.</p>
             </ul>
         </section>
         <aside id="coments">
