--- a/htmls/praias/ilhabela.html
+++ b/htmls/praias/ilhabela.html
@@ -29,7 +29,7 @@
                     <img src="/images/Ilhabela2.jpg" alt="">
                 </div>
                 <div class="painel">
-                    <h1>Painel 3</h1>
+                    <img src="/images/ilhabela3.jpg" alt="">
                 </div>
             </div>
             <button class="seta" id="anterior" onclick="mudar(-1)">&#8249;</button> <!--Isso é o codigo unidecimal para a setinha-->
