--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Home - BeachAdvisor</title>
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/home.css">
-    
+    <script src="/script/forms.js" defer></script>
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
             <a href="/htmls/sobreNos.html">Sobre Nós</a>
        </nav>
     </header>
-    <main>
+    <m>
         <section class="hero">
             <img src="images/background-home.jpg" alt="">
         </section>
@@ -52,6 +52,18 @@
                 <h2>Implementamos um sistema de verificação e validação dos relatórios dos usuários para garantir a precisão e confiabilidade das informações. Além disso, encorajamos a comunidade a contribuir de forma responsável e ética para manter a integridade dos dados.</h2>
             </div>
         </section>
+
+            <section>
+                <header class="formulario">Formulário de Contato</header>
+                <form id="form">
+                    <input type="text" name="" id="" placeholder="Nome Completo" required>
+                    <input type="tel" name="" id="" placeholder="Telefone" required>
+                    <input type="email" name="" id="" placeholder="Email" required>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Deixe sua Mensagem Aqui" required></textarea>
+                    <button type="submit" > Enviar </button>
+                </form>
+            </section>
+
     </main>
     <footer>
         <img src="images/logo.png" alt="">
