--- a/htmls/praias/sancho.htm
+++ b/htmls/praias/sancho.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ilhabela</title>
+    <title>Sancho</title>
     <script src="/script/javazin.js" defer></script>
     <script src="/script/coments.js" defer></script>
     <link rel="stylesheet" href="/styles/praiaGlobal.css">
