--- a/htmls/praias/barreirinhas.html
+++ b/htmls/praias/barreirinhas.html
@@ -72,6 +72,16 @@
                         <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
                         <p>Data: 02/06/2024, 08:17:37</p>
                     </div>
+                    <div class="comentario">
+                        <p>Usuário: Willian</p>
+                        <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
+                        <p>Data: 02/06/2024, 08:17:37</p>
+                    </div>
+                    <div class="comentario">
+                        <p>Usuário: Gabriel</p>
+                        <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
+                        <p>Data: 02/06/2024, 08:17:37</p>
+                    </div>
                 </div>
             </div>
 
