--- a/htmls/praias/frances.html
+++ b/htmls/praias/frances.html
@@ -66,9 +66,19 @@
                     <button onclick="AdicionarComentario()">Adicionar</button>
                 </div>
                 <div>
-                <div id="comentarios">
+               <div id="comentarios">
                     <div class="comentario">
                         <p>Usuário: Arthur</p>
+                        <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
+                        <p>Data: 02/06/2024, 08:17:37</p>
+                    </div>
+                    <div class="comentario">
+                        <p>Usuário: Willian</p>
+                        <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
+                        <p>Data: 02/06/2024, 08:17:37</p>
+                    </div>
+                    <div class="comentario">
+                        <p>Usuário: Gabriel</p>
                         <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
                         <p>Data: 02/06/2024, 08:17:37</p>
                     </div>
