--- a/htmls/praias/sancho.htm
+++ b/htmls/praias/sancho.htm
@@ -68,19 +68,18 @@
                 <div>
                 <div id="comentarios">
                     <div class="comentario">
-                        <p>Usuário: Arthur</p>
-                        <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
-                        <p>Data: 02/06/2024, 08:17:37</p>
+                        <p><span>Usuário:</span> Arthur</p>
+                        <p><span>Comentário:</span> Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
+                        <p><span>Data:</span> 02/06/2024, 08:17:37</p>
                     </div>
                     <div class="comentario">
-                        <p>Usuário: Willian</p>
-                        <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
-                        <p>Data: 02/06/2024, 08:17:37</p>
-                    </div>
-                    <div class="comentario">
-                        <p>Usuário: Gabriel</p>
-                        <p>Comentário: Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
-                        <p>Data: 02/06/2024, 08:17:37</p>
+                        <p><span>Usuário:</span> Willian</p>
+                        <p><span>Comentário:</span> Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
+                        <p><span>Data:</span> 02/06/2024, 08:17:37</p>
+                    </div><div class="comentario">
+                        <p><span>Usuário:</span> Gabriel</p>
+                        <p><span>Comentário:</span> Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
+                        <p><span>Data:</span> 02/06/2024, 08:17:37</p>
                     </div>
                 </div>
             </div>
