--- a/htmls/praias/frances.html
+++ b/htmls/praias/frances.html
@@ -67,7 +67,7 @@
                 </div>
                 <div>
                <div id="comentarios">
-                    div class="comentario">
+                    <div class="comentario">
                         <p><span>Usuário:</span> Arthur</p>
                         <p><span>Comentário:</span> Praia muito suja, com garrafas pet, lata de cerveja e sacos de lixo</p>
                         <p><span>Data:</span> 02/06/2024, 08:17:37</p>
